Addition to profile page

--- a/profile.html
+++ b/profile.html
@@ -16,6 +16,30 @@
             <a href="#cart">Cart</a>
           </div>
         </div>
+        <div class="page-title">
+          <h1>Profile</h1>
+          <p>In profile you will find your basic info and security verification.</p>
+      </div>
+      <div class="basic-info-section">
+        <h3>Basic Info<span><h6>Required fields (*)</h6></span></h3>
+        <hr />
+        <div>
+          <h4>Username</h4>
+          <input type="username" id="username" name="username" />
+          <h4>Display Name *</h4>
+          <input type="name" id="display-name" name="display-name" />
+          <h4>Email *</h4>
+          <input type="email" id="email" name="email" />
+          <h4>Phone Number</h4>
+          <input type="number" id="phone-number" name="phone-number" />
+          <h4>Password</h4>
+          <a class="button" id="password">Change Password</a>
+        </div>
+      </div>
+
+      <div>
+        <h3>Device Verification<span><h6>You can keep track and verify all of the devices you are logged in.</h6></span></h3>
+      </div>
    
   </body>
   </html>
