Addition to library page

--- a/library.html
+++ b/library.html
@@ -34,82 +34,82 @@
             <a class="sort-by-button" id="sort-by-options">Sort By</a>
         </div>
         <div class="container">
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><a href="lemonhaze.html"><img src="images/cannabis-strain.jpg" class="library-item" />
+                    <figcaption>
+                        <h1 class="title">Lemon Haze</h1>
+                    <h3 class="description">Happy | Stress Relieve</h3></figcaption>
+            </a></div>
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                     <figcaption>
                         <h1 class="title">Lemon Haze</h1>
                     <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                     <figcaption>
                         <h1 class="title">Lemon Haze</h1>
                     <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
-                    <figcaption>
-                        <h1 class="title">Lemon Haze</h1>
-                    <h3 class="description">Happy | Stress Relieve</h3></figcaption>
-            </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
             </div>
-            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="strain" />
+            <div class="strain-images"><img src="images/cannabis-strain.jpg" class="library-item" />
                 <figcaption>
                     <h1 class="title">Lemon Haze</h1>
                 <h3 class="description">Happy | Stress Relieve</h3></figcaption>
