Addition to strain page

--- a/lemonhaze.html
+++ b/lemonhaze.html
@@ -20,7 +20,7 @@
         <div class="sub-menu">
           <ul>
       <li><a href="home.html">Home</a></li>
-      <li><a href="library.html">Library</a></li>
+      <li><a href="library.html" class="active">Library</a></li>
       <li class="content-title">Lemon Haze</li>  
           </ul>
       </div>
