--- a/profile.html
+++ b/profile.html
@@ -5,23 +5,40 @@
     <title>GPSBud</title>
     <link href="styles.css" type="text/css" rel="stylesheet" />
 </head>
-    <body>
+<body>
    
-      <div class="header">
+  <div class="header">
           <img src="images/gpsbudlogo.png" class="logo" />
         <div class="topnav" id="myTopnav">
-            <a href="home.html" class="active">Home</a>
-            <a href="profile.html">My Profile</a> 
+            <a href="home.html">Home</a>
+            <a href="profile.html" class="active">My Profile</a> 
             <a href="library.html">Library</a>
             <a href="#cart">Cart</a>
           </div>
-        </div>
+  </div>
+  <div class="container-profile">
+  <div class="user-section">
+          <div>
+          <img src="images/bowie.jpg" class="userpicture" />
+          <h3>Happy Lamb</h3>
+          <h4>Review</h4>
+          </div>
+          <div class="side-menu">
+            <a href="profile.html" class="side-menu-active">Profile</a>
+            <br />
+            <a href="patientsorders.html">Orders</a>
+            <br />
+            <a href="mywallet.html">My Wallet</a>
+          </div>
+  </div>
+  <div class="profile-section">
         <div class="page-title">
           <h1>Profile</h1>
-          <p>In profile you will find your basic info and security verification.</p>
+          <p class="title-underlined">In profile you will find your basic info and security verification.</p>
+          <hr />
       </div>
       <div class="basic-info-section">
-        <h3>Basic Info<span><h6>Required fields (*)</h6></span></h3>
+        <h3 class="title-underlined">Basic Info<span><h6>Required fields (*)</h6></span></h3>
         <hr />
         <div>
           <h4>Username</h4>
@@ -36,10 +53,27 @@
           <a class="button" id="password">Change Password</a>
         </div>
       </div>
-
+  </div>
+  <div class="device-verification-section">
       <div>
-        <h3>Device Verification<span><h6>You can keep track and verify all of the devices you are logged in.</h6></span></h3>
+        <h3 class="title-underlined">Device Verification<span><h6>You can keep track and verify all of the devices you are logged in.</h6></span></h3>
+        <hr />
       </div>
+        <div>
+          <input type="checkbox" name="device" value="macbook" />
+          <h3>MacBook Pro</h3>
+          <h4>This device</h4>
+          <h4>October 22, 2020 | 2:00 p.m.</h4>
+        </div>
+        <div>
+          <input type="checkbox" name="device" value="nokia5" />
+          <h3>Nokia 5</h3>
+          <h4>This device</h4>
+          <h4>October 23, 2020 | 4:00 p.m.</h4>
+          <h4>If you don't recognize a device remove from account and change password.</h4>
+        </div>
+  </div>
+  </div>
    
-  </body>
+</body>
   </html>
