Addition to profile page

--- a/profile.html
+++ b/profile.html
@@ -50,7 +50,7 @@
           <h4>Phone Number</h4>
           <input type="number" id="phone-number" name="phone-number" />
           <h4>Password</h4>
-          <a class="button" id="password">Change Password</a>
+          <input type="submit" name="password" value="Change Password" />
         </div>
       </div>
   </div>
