Addition to strain page icons

--- a/lemonhaze.html
+++ b/lemonhaze.html
@@ -36,6 +36,7 @@
         
           <h3 class="title-underlined">Aromatics</h3> 
           <hr class="top-container" /> 
+          <img src="images/citrus-emoji.png" class="library-image-icons" /><label for="citrus-emoji">Citrus</label>
           <!-- </div> -->
           <!-- <div> -->
             <h3 class="title-underlined">Flavors</h3>
@@ -54,8 +55,12 @@
           <h3 class="title-underlined">Effects</h3>
           <hr class="bottom-container" />
           <h4>Feelings:</h4>
+          <img src="images/happy-emoji.png" class="library-image-icons" /><label for="happy-emoji">Happy</label>
+          <img src="images/energy-emoji.png" class="library-image-icons" /><label for="energy-emoji">Energy</label>
+          <img src="images/focus-emoji.png" class="library-image-icons" /><label for="focus-emoji">Focus</label>
           <h4>Relieves:</h4>
           <h4>Side Effects:</h4>
+          <img src="images/dizzy-emoji.png" class="library-image-icons" /><label for="dizzay-emoji">Dizzy</label>
         </div>
         </div>
         <!-- </div> -->
