--- a/caregivers.html
+++ b/caregivers.html
@@ -8,29 +8,37 @@
 <body>
    
   <div class="header">
-          <img src="images/gpsbudlogo.png" class="logo" />
-        <div class="topnav" id="myTopnav">
-            <a href="home.html">Home</a>
-            <a href="caregivers.html" class="active">My Profile</a> 
-            <a href="library.html">Library</a>
-            <a href="#cart">Cart</a>
-          </div>
+    <img src="images/gpsbudlogo.png" class="logo" />
+  <div class="topnav" id="myTopnav">
+      <a href="home.html" class="active">Home</a>
+      
+      <div class="dropdown">
+        <button class="dropbtn">My Profile</button>
+        <!-- <a href="profile.html" class="dropdown"></a> -->
+        <div class="dropdown-content">
+          <a href="caregivers.html">Caregiver Profile</a>
+          <a href="patients.html">Patient Profile</a>
+        </div>
+      <a href="library.html">Library</a>
+      <a href="#cart">Cart</a>
+    </div>
   </div>
+</div>
   <div class="container-profile">
   <div class="user-section">
           <div>
           <img src="images/rainbow.jpg" class="userpicture" />
-          <h3>Limbo Rainbow</h3>
+          <h3>Limbo Rain</h3>
           <h4>Review</h4>
           </div>
           <div class="side-menu">
             <a href="caregivers.html" class="side-menu-active">Profile</a>
             <br />
-            <a href="storeproducts.html">Store Products</a>
+            <a href="storeproducts.html">Store</a>
             <br />
-            <a href="storeorders.html">Store Orders</a>
+            <a href="storeorders.html">Storer</a>
             <br />
-            <a href="caregiverswallet.html">Store Wallet</a>
+            <a href="caregiverswallet.html">Store</a>
           </div>
   </div>
   <div class="caregiver-section">
@@ -43,56 +51,56 @@
         <h3 class="title-underlined">Basic Info<span><h6>Required fields (*)</h6></span></h3>
         <hr />
         <div>
-          <label>Username</label>
-          <input type="username" id="username" name="username" />
-          <label>Store Name *</label>
+          <h4>Username</h4>
+          <input type="name" id="username" name="username" />
+          <h4>Store Name *</h4>
           <input type="name" id="store-name" name="store-name" />
-          <label>Email *</label>
+          <h4>Email *</h4>
           <input type="email" id="email" name="email" />
-          <label>Phone Number</label>
+          <h4>Phone Number</h4>
           <input type="number" id="phone-number" name="phone-number" />
-          <label>Short Description</label>
-          <input type="number" id="store-description" name="store-description" />
+          <h4>Short Description</h4>
+          <textarea name="description" col="20" rows="5">Write brief info about your store...</textarea>
           <div class="store-hours">
-              <label>Store Hours *</label>
+              <h4>Store Hours *</h4>
               <div>
-              <label>Sunday</label>
+              <h4>Sunday</h4>
               <input type="time" id="stour-hours" name="store-hours" /><span>&#8208;</span>
               <input type="time" id="stour-hours" name="store-hours" />
               </div>
               <div>
-              <label>Monday</label>
+              <h4>Monday</h4>
               <input type="time" id="stour-hours" name="store-hours" /><span>&#8208;</span>
               <input type="time" id="stour-hours" name="store-hours" />
               </div>
               <div>
-              <label>Tuesday</label>
+              <h4>Tuesday</h4>
               <input type="time" id="stour-hours" name="store-hours" /><span>&#8208;</span>
               <input type="time" id="stour-hours" name="store-hours" />
               </div>
               <div>
-              <label>Wednesday</label>
+              <h4>Wednesday</h4>
               <input type="time" id="stour-hours" name="store-hours" /><span>&#8208;</span>
               <input type="time" id="stour-hours" name="store-hours" />
               </div>
               <div>
-              <label>Thursday</label>
+              <h4>Thursday</h4>
               <input type="time" id="stour-hours" name="store-hours" /><span>&#8208;</span>
               <input type="time" id="stour-hours" name="store-hours" />
               </div>
               <div>
-              <label>Friday</label>
+              <h4>Friday</h4>
               <input type="time" id="stour-hours" name="store-hours" /><span>&#8208;</span>
               <input type="time" id="stour-hours" name="store-hours" />
               </div>
               <div>
-              <label>Sunday</label>
+              <h4>Sunday</h4>
               <input type="time" id="stour-hours" name="store-hours" /><span>&#8208;</span>
               <input type="time" id="stour-hours" name="store-hours" />
               </div>
           </div>
           
-          <label>Password</label>
+          <h4>Password</h4>
           <input type="submit" name="password" value="Change Password" />
         </div>
       </div>
@@ -113,7 +121,7 @@
           <h3>Nokia 5</h3>
           <h4>This device</h4>
           <h4>October 23, 2020 | 4:00 p.m.</h4>
-          <h4>If you don't recognize a device remove from account and change password.</h4>
+          <h6>If you don't recognize a device remove from account and change password.</h6>
         </div>
   </div>
   </div>
