Addition to index page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <img src="images/gpsbudlogo.png" class="logo" />
         <div class="topnav" id="myTopnav">
             <a href="#home" class="active">Home</a>
-            <a href="profile.html">My Profile</a>
+            <a href="profile.html" class="dropdown">My Profile</a>
             <a href="#library">Library</a>
             <a href="#cart">Cart</a>
           </div>
