--- a/lemonhaze.html
+++ b/lemonhaze.html
@@ -8,22 +8,28 @@
     <body>
    
       <div class="header">
-          <img src="images/gpsbudlogo.png" class="logo" />
-        <div class="topnav" id="myTopnav">
-            <a href="home.html" class="active">Home</a>
-            <a href="profile.html">My Profile</a> 
-            <a href="library.html">Library</a>
-            <a href="#cart">Cart</a>
-          </div>
+        <img src="images/gpsbudlogo.png" class="logo" />
+      <div class="topnav" id="myTopnav">
+          <a href="home.html" class="active">Home</a>
+          
+          <div class="dropdown">
+            <button class="dropbtn">My Profile</button>
+            <!-- <a href="profile.html" class="dropdown"></a> -->
+            <div class="dropdown-content">
+              <a href="caregivers.html">Caregiver Profile</a>
+              <a href="patients.html">Patient Profile</a>
+            </div>
+          <a href="library.html">Library</a>
+          <a href="#cart">Cart</a>
         </div>
-
-        <div class="sub-menu">
-          <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="library.html" class="active">Library</a></li>
-      <li class="content-title">Lemon Haze</li>  
-          </ul>
       </div>
+    </div>
+
+    <ul class="breadcrumb">
+      <li><a href="home.html">Home</a></li>
+      <li><a href="library.html">Library</a></li>
+      <li class="active-title">Lemon Haze</li>
+    </ul>
 
       <div class="top-container">
         <!-- <div> -->
@@ -36,6 +42,7 @@
         
           <h3 class="title-underlined">Aromatics</h3> 
           <hr class="top-container" /> 
+          <img src="images/fruity-emoji.png" class="library-image-icons" /><label for="fruity-emoji">Fruity</label>
           <img src="images/citrus-emoji.png" class="library-image-icons" /><label for="citrus-emoji">Citrus</label>
           <!-- </div> -->
           <!-- <div> -->
@@ -60,6 +67,7 @@
           <img src="images/focus-emoji.png" class="library-image-icons" /><label for="focus-emoji">Focus</label>
           <h4>Relieves:</h4>
           <h4>Side Effects:</h4>
+          <img src="images/dryeye-emoji.png" class="library-image-icons" /><label for="dryeye-emoji">Dry Eye</label>
           <img src="images/dizzy-emoji.png" class="library-image-icons" /><label for="dizzay-emoji">Dizzy</label>
         </div>
         </div>
