Addition to view details page

--- a/viewdetails.html
+++ b/viewdetails.html
@@ -7,15 +7,23 @@
 </head>
 <body>
    
-  <div class="header">
-          <img src="images/gpsbudlogo.png" class="logo" />
-        <div class="topnav" id="myTopnav">
-            <a href="home.html">Home</a>
-            <a href="profile.html" class="active">My Profile</a> 
-            <a href="library.html">Library</a>
-            <a href="#cart">Cart</a>
-          </div>
-  </div>
+    <div class="header">
+        <img src="images/gpsbudlogo.png" class="logo" />
+      <div class="topnav" id="myTopnav">
+          <a href="home.html" class="active">Home</a>
+          
+          <div class="dropdown">
+            <button class="dropbtn">My Profile</button>
+            <!-- <a href="profile.html" class="dropdown"></a> -->
+            <div class="dropdown-content">
+              <a href="caregivers.html">Caregiver Profile</a>
+              <a href="patients.html">Patient Profile</a>
+            </div>
+          <a href="library.html">Library</a>
+          <a href="#cart">Cart</a>
+        </div>
+      </div>
+    </div>
   <div class="container-orders">
   <div class="user-section">
           <div>
