--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
             </div>
     </div>
 <!-- Age verification Modal -->
-   <div class="age-verification-modal">
+   <div class="age-modal">
      <div class="age-verification-content">
        <h3>Age Verification</h3>
        <p>Hey! We are pretty sure you ar eover the limit, but just making sure!</p>
@@ -46,6 +46,6 @@
      </div>
 
    </div>
-
+   <script src="js/age-modal.js"></script>
   </body>
   </html>
