--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <div class="topnav" id="myTopnav">
             <a href="#home" class="active">Home</a>
             <a href="profile.html" class="dropdown">My Profile</a>
-            <a href="#library">Library</a>
+            <a href="library.html">Library</a>
             <a href="#cart">Cart</a>
           </div>
         </div>
